@@ -1,3 +1,8 @@
+Wed May  6 22:49:54 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm_eval.c (rb_method_call_status): undefined refined method is
+	  not callable unless using.  [ruby-core:69064] [Bug #11117]
+
 Sun May  3 22:40:06 2015  Rei Odaira  <Rei.Odaira@gmail.com>
 
 	* ext/-test-/file/fs.c: need to include sys/statvfs.h
